test on newer rubies, fix minimal puppet requirement

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,8 @@ script:
 #  - RAKE_ENV=ci bundle exec rake lint
 rvm:
   - 2.3.3
+  - 2.4.5
 env:
   - PUPPET_VERSION="~> 4.0" STRICT_VARIABLES=yes PARALLEL_TEST_PROCESSORS=2
   - PUPPET_VERSION="~> 5.0" STRICT_VARIABLES=yes PARALLEL_TEST_PROCESSORS=2
+  - PUPPET_VERSION="~> 6.0" STRICT_VARIABLES=yes PARALLEL_TEST_PROCESSORS=2
